<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">virm</string>
    <string name="empty"></string>
    <string name="lorum_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eu magna in dui tincidunt porttitor. Nunc sed varius sem. Nullam porttitor nibh sit amet sem tempus sagittis. Vestibulum fringilla mauris quam, et dictum est. Pellentesque viverra, ipsum ut venenatis laoreet, odio quam gravida justo, vitae ullamcorper magna est vel lorem. Vivamus volutpat odio sit amet eros viverra tempor dictum arcu accumsan. Fusce libero metus, euismod sit amet pretium vitae, congue a turpis. Integer lobortis luctus congue. Maecenas consectetur ullamcorper lectus, feugiat scelerisque turpis semper at. Nulla laoreet tincidunt magna fermentum convallis. Donec quam arcu, euismod non aliquam et, dapibus eu lorem.

Sed quam urna, pellentesque eu eleifend at, molestie quis eros. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque nec nibh non augue hendrerit malesuada. Aliquam viverra, arcu id sollicitudin porta, libero libero tempus justo, eu varius enim odio scelerisque magna. Aliquam sagittis consectetur massa, in consequat odio vulputate ut. Aenean dignissim ultricies pretium. Morbi et ligula sit amet leo scelerisque blandit pulvinar in diam. In laoreet dictum justo, vitae suscipit lorem facilisis ut. Sed porta tellus vitae quam consectetur in suscipit quam posuere. Mauris lacinia interdum mauris quis rutrum. Phasellus congue placerat purus ut viverra. Quisque neque purus, vulputate nec ullamcorper sed, viverra vitae risus. Nunc id eros nisl, sed scelerisque magna. Pellentesque mattis, ipsum sit amet tincidunt sollicitudin, enim arcu condimentum quam, at euismod augue justo eget sapien.

Nulla rutrum nisi sed justo gravida a adipiscing elit sagittis. Maecenas vel arcu nulla. Aliquam erat volutpat. Nullam auctor lorem vehicula ante sagittis pharetra. Curabitur ultricies nisl sed odio interdum accumsan. Praesent elementum adipiscing orci, eu eleifend metus dignissim eget. Pellentesque in felis nibh. Proin porta nunc ut leo porttitor quis pharetra eros suscipit. Praesent id felis vitae enim consequat convallis. Proin eget eros in mauris euismod interdum.

Phasellus lacus eros, pellentesque at tincidunt a, aliquam quis ante. Nunc sed risus id tortor vehicula rhoncus. Nunc egestas interdum fermentum. Phasellus non elit volutpat turpis sagittis commodo. Donec ipsum urna, porttitor in rutrum placerat, placerat at velit. Nam sollicitudin felis nec eros interdum vitae venenatis diam condimentum. Sed urna diam, dignissim in mollis non, ullamcorper non urna. Nam eleifend semper tellus nec lobortis. Donec malesuada tortor tempor augue pulvinar sollicitudin eleifend ante feugiat. Nullam dui diam, facilisis eget semper eget, eleifend eget ipsum. Integer et erat elit.

Suspendisse dictum adipiscing tincidunt. Fusce in libero ipsum, eget varius sem. Ut vel nisl enim. Praesent non mauris leo, ac semper odio. Vivamus feugiat porttitor tortor et viverra. Vivamus vitae nisi mauris. Nulla ut sapien diam, sed tincidunt nisi. Sed id purus a nulla lobortis pellentesque non in orci. Nulla porta commodo odio, eu tincidunt lectus pharetra in.

Ut enim nunc, fermentum ut bibendum vitae, faucibus et neque. Ut egestas tellus a nibh pellentesque vehicula. Vestibulum adipiscing blandit est, vitae dictum tellus laoreet vitae. Phasellus gravida, mi eget vehicula suscipit, lacus dolor tempus sapien, sit amet sagittis nisi sapien at leo. Suspendisse sit amet leo quis elit tempus sodales.</string>

	<string name="preference_min_distance_threshold">distance</string>
	<string name="preference_min_good_matches">threshold</string>
	<string name="preference_default_min_distance_threshold">35</string>
	<string name="preference_default_min_good_matches">5</string>
	<string name="preference_desired_frame_mat_size">frame size</string>
	<string name="preference_default_desired_frame_mat_size">150</string>
	
	<string name="preference_server_ip">server_ip</string>
	<string name="preference_server_port">server_port</string>
	<string name="preference_default_server_ip">50.17.57.182</string>
	<string name="preference_default_server_port">1337</string>
</resources>